--- a/notebooks/attacks.ipynb
+++ b/notebooks/attacks.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_3748\\866163543.py:1: DtypeWarning: Columns (85) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_18468\\866163543.py:1: DtypeWarning: Columns (85) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data_attack = pd.read_csv('../data/processed/attacks.csv')\n"
      ]
     },
@@ -224,7 +224,7 @@
        "[5 rows x 88 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,22 +383,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified: 'reduced_data_attack.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 39\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;66;03m# Verify the size of the saved file\u001b[39;00m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m file_size_mb \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mgetsize(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreduced_data_attack.csv\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m1e6\u001b[39m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSize of the reduced CSV file: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_size_mb\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m MB\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m<frozen genericpath>:50\u001b[0m, in \u001b[0;36mgetsize\u001b[1;34m(filename)\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'reduced_data_attack.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -442,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -570,6 +557,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['TFTP',\n",
+       " 'BENIGN',\n",
+       " 'DrDoS_DNS',\n",
+       " 'DrDoS_MSSQL',\n",
+       " 'DrDoS_NetBIOS',\n",
+       " 'DrDoS_NTP',\n",
+       " 'DrDoS_SNMP',\n",
+       " 'DrDoS_SSDP',\n",
+       " 'DrDoS_UDP',\n",
+       " 'Syn',\n",
+       " 'UDP-lag',\n",
+       " 'WebDDoS',\n",
+       " 'Portmap']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(data_attack['Label'].unique())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -578,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -866,8 +885,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The fact that 75% of flows have 2 or fewer packets suggests a prevalence of very short interactions. This could be indicative of certain types of DDoS attacks that send minimal data to overwhelm systems.\n",
+    "- The presence of flows with very high packet counts (up to 99,802) could represent volume-based DDoS attacks attempting to overwhelm targets with a large number of packets.\n",
+    "- The large difference between the mean (9 packets) and max (99,802 packets) indicates a wide variety of traffic patterns. This could make it challenging to set simple thresholds for attack detection."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -892,8 +920,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- BENIGN Traffic:\n",
+    "\n",
+    "Shows a wide range of forward packet counts, from very low to very high.\n",
+    "Has many outliers, indicating diverse normal network behavior.\n",
+    "This variability is expected in legitimate traffic.\n",
+    "- DrDoS_NTP:\n",
+    "\n",
+    "Stands out with a significantly higher median and larger box, indicating more forward packets on average.\n",
+    "This suggests NTP reflection attacks in this dataset involve sending more packets than other attack types.\n",
+    "- WebDDoS:\n",
+    "\n",
+    "Shows a wider range than most other attack types, with a higher median.\n",
+    "This might indicate attempts to mimic normal web traffic patterns.\n",
+    "- DrDoS Attacks (DNS, SNMP, SSDP, etc.):\n",
+    "\n",
+    "Generally show very low forward packet counts, with medians close to the minimum.\n",
+    "This is consistent with reflection attacks, where the attacker sends few packets to amplify the response.\n",
+    "\n",
+    "- Most DDoS attacks in this dataset are characterized by a low number of forward packets, likely focusing on sending minimal data to trigger larger responses.\n",
+    "DrDoS_NTP stands out as using significantly more forward packets, which could make it easier to detect but also more impactful.\n",
+    "BENIGN traffic shows the most variability, reinforcing the challenge of distinguishing some attacks from normal traffic.\n",
+    "The low forward packet counts in many attack types emphasize the efficiency of these DDoS methods, using minimal resources to cause significant impact.\n",
+    "WebDDoS and TFTP attacks show slightly different patterns, possibly due to the nature of the protocols they exploit.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -924,6 +981,19 @@
     "mean_fwd_packets = data_attack.groupby('Label')['Total Fwd Packets'].mean().sort_values(ascending=False)\n",
     "print(\"Mean Total Forward Packets by Attack Type:\")\n",
     "print(mean_fwd_packets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This confirms our observation from the box plot that NTP reflection attacks in this dataset involve sending many more packets than other attacks.NTP (Network Time Protocol) attacks often exploit the amplification factor of NTP servers, which might explain the higher packet count.\n",
+    "- BENIGN Normal user behavior often involves more substantial data exchanges, resulting in more packets.\n",
+    "- Variety in Attack Strategies: The wide range of mean packet counts (from 2 to 63) shows that different DDoS attacks employ varied strategies in terms of packet volume.\n",
+    "- Efficiency of Reflection Attacks: Many DrDoS attacks (except NTP) use relatively few packets, highlighting their efficiency in causing large impacts with minimal initial traffic.\n",
+    "NTP as an Outlier: The high packet count for NTP attacks suggests they might be easier to detect based on volume alone, but potentially more damaging.\n",
+    "Benign Traffic Characteristics: The higher packet count for benign traffic underscores the challenge in differentiating some low-volume attacks from normal traffic fluctuations.\n",
+    "Potential for Camouflage: Attacks with packet counts closer to benign traffic (like WebDDoS) might be attempting to blend in with normal traffic patterns."
    ]
   }
  ],
